<resources>
    <string name="app_name">Seeka</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="launch_logo_desc">Launch Logo</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="launch_top_slogan">Over 5 Million Satisfied</string>
    <string name="launch_bottom_slogan">International Students</string>
    <string name="title_activity_start">Get Started</string>
    <string name="get_started_button_text">Get Started</string>
    <string name="title_activity_login">Login</string>
    <string name="policy_aggreement">By signing up you agree to Fresh Futures User</string>
    <string name="agreement_portion_text">Agreement Private Policy and Cookie Policy</string>
    <string name="btnGetStarted_text">Get Started</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="list_settings_title">MenuActivity</string>
    <string name="title_activity_menus">Menu</string>
    <string name="menu_images_res">Menu Images</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bootom_menu_home_button">Bottom menu tab home button</string>
    <string name="seeka_launch_logo_desc">Seeka Launch Logo</string>
    <string name="launch_search_icon">Launch Search Icon</string>
    <string name="launch_top_intro_text1">courses in seconds</string>
    <string name="launch_bottom_intro1">Search and compare over 1 000 000</string>
    <string name="launch_top_intro_text2">Narrow down your choices by using our</string>
    <string name="launch_bottom_intro2">filter for the most accurate searches.</string>
    <string name="launch_top_intro_text3">Did you know 40% of students aren\'t</string>
    <string name="launch_bottom_intro3">happy in the city they are studying? Use</string>
    <string name="launch_interests_bottom_intro3">Seeka to match your lifestyle needs.</string>
    <string name="launch_top_intro_text4">Flick through millions of Country, City and</string>
    <string name="launch_bottom_intro4">University images to feel your way through</string>
    <string name="launch_interests_bottom_intro4">your options.</string>
    <string name="hint_email_text">Email</string>
    <string name="hint_password_text">Password</string>
    <string name="email_textbox_image">Image for textbox</string>
    <string name="password_textbox_image">Image for password textbox</string>
    <string name="button_login_text">Log in</string>
    <string name="not_member_text">Not a member?</string>
    <string name="create_account_text">Create account</string>
    <string name="facebook_text">Use Facebook</string>
    <string name="image_back_button_desc">Image for back button</string>
    <string name="title_activity_set_up">Set Up</string>
    <string name="hint_name">Username</string>
    <string name="user_agreement1">By Signing up, you agree to Fresh Futures\' User</string>
    <string name="user_agreement2" />
    <string name="user_agreement_policy2">Agreement, Private Policy and Cookie Policy</string>
    <string name="image_CA">Image Button CA</string>
    <string name="shadow_back">Shadow Background Button</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_invalid_email">This username is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="title_activity_home">Home</string>
    <string name="error_invalid_name">Name should only contain alphabets</string>
    <string name="text_number_of_courses_available">Courses Available</string>
    <string name="text_courses_accepted">Courses Accepted You</string>
    <string name="search_box_question">Where would you like to study?</string>
    <string name="search_filter_text"> <![CDATA[Filter by Cost & Duration]]></string>
    <string name="req_i_text">Req.</string>
    <string name="course_title_course">Postgraduate Course:</string>
    <string name="search_matching_text">Matching</string>
    <string name="of_your_lifestyle">of your lifestyle</string>
    <string name="recognition_text">Recognition</string>
    <string name="internationally_known">Internationally Known</string>
    <string name="employability_text">Employability</string>
    <string name="above_average">Above Average</string>
    <string name="req_i_image_desc">Req i Image</string>
    <string name="test_text">Medium Text</string>
    <string name="international_ranked_text">Internationally ranked in top</string>
    <string name="duration_text">3 years</string>
    <string name="vnd_text">/Year</string>
    <string name="vnd_figure_text">11 323</string>
    <string name="matching_value">70%</string>
    <string name="recognition_value">9.4</string>
    <string name="employability_value">6.8</string>
    <string name="locked_course_identifier_image">Locked course identifier</string>
    <string name="home_scholarship_title">Scholarship</string>
    <string name="search_preference_value">pref_search_status</string>
    <string name="search_preference_view_position">pref_search_view_position</string>
    <string name="serachBox_hint">Type here</string>
    <string name="country_australia">Australia</string>
    <string name="country_austria">Austria</string>
    <string name="country_brazil">Brazil</string>
    <string name="country_canada">Canada</string>
    <string name="country_china">China</string>
    <string name="country_czech">Czech Republic</string>
    <string name="country_denmark">Denmark</string>
    <string name="country_finland">Finland</string>
    <string name="country_france">France</string>
    <string name="country_germany">Germany</string>
    <string name="country_iceland">Iceland</string>
    <string name="country_india">India</string>
    <string name="country_ireland">Ireland</string>
    <string name="country_italy">Italy</string>
    <string name="country_japan">Japan</string>
    <string name="country_malaysia">Malaysia</string>
    <string name="country_mexico">Mexico</string>
    <string name="country_netherlands">Netherlands</string>
    <string name="country_new_zealand">New Zealand</string>
    <string name="country_poland">Poland</string>
    <string name="country_russia">Russia</string>
    <string name="country_singapore">Singapore</string>
    <string name="country_slovenia">Slovenia</string>
    <string name="country_south_africa">South Africa</string>
    <string name="country_spain">Spain</string>
    <string name="country_sweden">Sweden</string>
    <string name="country_switzerland">Switzerland</string>
    <string name="country_u_a_e">U.A.E</string>
    <string name="country_u_s_a">U.S.A</string>
    <string name="country_uk">United Kingdom</string>
    <string name="ctry_code_australia">AU</string>
    <string name="ctry_code_austria">AT</string>
    <string name="ctry_code_brazil">BR</string>
    <string name="ctry_code_canada">CA</string>
    <string name="ctry_code_china">CN</string>
    <string name="ctry_code_czech">CZ</string>
    <string name="ctry_code_denmark">DK</string>
    <string name="ctry_code_finland">FI</string>
    <string name="ctry_code_france">FR</string>
    <string name="ctry_code_germany">DE</string>
    <string name="ctry_code_iceland">IS</string>
    <string name="ctry_code_india">IN</string>
    <string name="ctry_code_ireland">IE</string>
    <string name="ctry_code_italy">IT</string>
    <string name="ctry_code_japan">JP</string>
    <string name="ctry_code_malaysia">MY</string>
    <string name="ctry_code_mexico">MX</string>
    <string name="ctry_code_netherlands">NL</string>
    <string name="ctry_code_new_zealand">NZ</string>
    <string name="ctry_code_poland">PL</string>
    <string name="ctry_code_russia">RU</string>
    <string name="ctry_code_singapore">SG</string>
    <string name="ctry_code_slovenia">SI</string>
    <string name="ctry_code_south_africa">ZA</string>
    <string name="ctry_code_spain">ES</string>
    <string name="ctry_code_sweden">SE</string>
    <string name="ctry_code_switzerland">SZ</string>
    <string name="ctry_code_u_a_e">AE</string>
    <string name="ctry_code_u_s_a">US</string>
    <string name="ctry_code_uk">GB</string>
    <string name="australia_available">19,000+</string>
    <string name="austria_available">2,000+</string>
    <string name="belgium_available">4,500+</string>
    <string name="brazil_available">10,000+</string>
    <string name="canada_available">20,000+</string>
    <string name="denmark_available">8,300+</string>
    <string name="england_available">500+</string>
    <string name="france_available">15,670+</string>
    <string name="germany_available">13,400+</string>
    <string name="holland_available">200+</string>
    <string name="australia_accepted">700</string>
    <string name="austria_accepted">57</string>
    <string name="belgium_accepted">180</string>
    <string name="brazil_accepted">540</string>
    <string name="canada_accepted">3000</string>
    <string name="denmark_accepted">600</string>
    <string name="england_accepted">12</string>
    <string name="france_accepted">903</string>
    <string name="germany_accepted">580</string>
    <string name="holland_accepted">5</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="filter_level_Title">Level</string>
    <string name="filter_foundation_title">Foundation</string>
    <string name="filter_diploma">Diploma</string>
    <string name="text_undergrad_title">Undergrad</string>
    <string name="text_postgrad_title">Postgrad</string>
    <string name="filter_course_title">Courses</string>
    <string name="filter_duration_title">Duration</string>
    <string name="filter_duration_sub_title">of course</string>
    <string name="filter_cost_title">Cost</string>
    <string name="filter_cost_subtitle">Per Year</string>
    <string name="filter_top_title_info">Your Search Results are based on your Grades and other profile entries. Go to</string>
    <string name="btn_go_profile_text">Profile.</string>
    <string name="level_of_course_text_size">Level of education</string>
    <string name="text_foundation">Foundation</string>
    <string name="text_diploma">Diploma</string>
    <string name="text_undergrad">Undergraduate</string>
    <string name="text_postgraduate">Post Graduate</string>
    <string name="text_other1">Others</string>
    <string name="lauch_filter_title_text">Super Search Filter</string>
    <string name="launch_location_title">Search for the right location</string>
    <string name="welcome_title_text">Welcome to Seeka</string>
    <string name="facebook_signup_notification_text">It\'s quicker and easier with Facebook</string>
    <string name="facebook_button_text">Log in with Facebook</string>
    <string name="fb_logo_description">Facebook Logo</string>
    <string name="email_signup_login_info">You can also use your email address</string>
    <string name="button_register_text">Register</string>
    <string name="user_agreement_text">By signing up, you agree to</string>
    <string name="clickable_user_agreement">Seeka\'s User Agreement</string>
    <string name="internship_agreement_string">\"If you are looking for internships within Australia, please use any of the job websites or alternatively you be able to get one of our own recruitment team memebers to locate you an internship. Fresh Futures charges between $1000 to $4000 depending on an internship. If in any case we do not find you an internship, this is a 100% money refund if job is not located as to the agreement between the Recruiter and Student\"</string>
    <string name="popular_job_website">Popular Job Website</string>
    <string name="contact_us_string">Contact Us</string>
</resources>