<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.freshfutures.seeka.StartActivityFragmentTwo"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/seeka_blue">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/seeka_logo_size"
                android:layout_height="@dimen/seeka_logo_size"
                android:id="@+id/imgLaunchFilter"
                android:layout_gravity="center"
                android:contentDescription="@string/launch_search_icon"
                android:background="@android:color/transparent"
                android:src="@mipmap/filter_launch_icon"
                android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:background="@color/white_color"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <edu.freshfutures.seeka.CustomWidgets.CustomTextViewMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lauch_filter_title_text"
            android:id="@+id/txtLaunchFilterTitle"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/seeka_blue"
            android:textSize="@dimen/launch_filter_title_text_size"
            android:layout_marginTop="@dimen/welcome_title_top_margin" />

        <edu.freshfutures.seeka.CustomWidgets.CustomTextViewLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_top_intro_text2"
            android:id="@+id/txtLaunchFilterSubTitle"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/welcome_subtitle_text_size"
            android:layout_marginTop="@dimen/welcome_subtitle_top_margin" />

        <edu.freshfutures.seeka.CustomWidgets.CustomTextViewLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_bottom_intro2"
            android:id="@+id/txtLaunchFilterSubtitle2"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/welcome_subtitle_text_size" />
    </LinearLayout>

</LinearLayout>
